--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -157,24 +157,26 @@
     /*#method { visibility:hidden !important; }*/
 
    @media (max-width:920px) {
-/*    #mainFilters { display:none; }*/
-    #wrapper { width:100%; }
-   .leftSide { width:100%; }
-   .switch, .bigswitch { border-radius:0 !important; width:48% !important; }
-   .card { padding:20px; height:auto !important; width:100%; display:block; }
-   .rightSide { display:none; }
-   .count { font-size:1.4em; }
-   #chartAll { width:100%; }
-   #sidebar/*, #filterButtons */{ display:none; }
-   /*#selector { display:block; }*/
+    #wrapper { width:600px; }
+    .chatterThing { text-align:left !important; height:180px; }
+    .chatterThing img { margin-left:auto; margin-right:auto; }
+    .switch, .bigswitch { border-radius:0 !important; width:48% !important; }
+    #sidebar { width:100%; height:160px; text-align:center; margin-top:9px; }
+    .card { padding:20px; height:auto !important; width:62%; display:block; }
+    #method { text-align:center; }
    }
-   @media (max-width:600px) {
+   @media (max-width:605px) {
+    #wrapper { width:434px; }
+    .leftSide { width:100%; }
+    .switch, .bigswitch { border-radius:0 !important; width:48% !important; }
+    .rightSide { display:none; }
+    .count { font-size:1.4em; }
+    #chartAll { width:100%; }
+    .card { padding:20px; height:auto !important; width:44%; display:block; }
+    #sidebar/*, #filterButtons */{ display:none; }
     .featherlight-content { width:98%; height:auto; }
-    .card { padding:0; }
     #wrapper { text-align:left !important; }
     #clickyStuff { visibility:hidden; }
-    .chatterThing { text-align:left !important; height:180px; }
-    .switch, .bigswitch { border-radius:0 !important; width:48% !important; }
     #filter { width:100% !important; float:none; }
     #method { width:100%; float:none; text-align:center; padding:10px; }
     .year { width:5%; }
@@ -183,6 +185,17 @@
     .dot { width:15px !important; height:15px !important; }
     #chartLabels .yearLabel { transform: rotate(-90deg); transform-origin: right top 0; vertical-align: middle; }
     #chartLabels { margin-left:-15px; }
+   }
+
+   @media (max-width:360px) {
+    #wrapper { width:90%; }
+    #chartLabels .yearLabel { font-size:0.5em; width:4.6%; }
+    #filter input { font-size:0.6em; }
+    .card { padding:20px; height:auto !important; width:32%; display:block; }
+   }
+
+   @media (max-width:320px) {
+    #wrapper { width:100%; }
    }
   </style> 
 </head>
@@ -332,6 +345,8 @@
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search list of all deaths by name, year or keyword"></input></div>
 <div id="method"><a href="http://www.startribune.com/how-we-counted-police-involved-deaths/380709141/" target="new_">READ METHODOLOGY</a></div>
+
+<div class="breaker"></div>
 
 <button id='upClick' class="navButton">&#9650;</button>
      <div id="deathsTable"></div>
