--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -33,7 +33,7 @@
    a:hover { color:#333 !important; }
    .name { text-transform: capitalize !important; font-weight:900; font-size:1.25em; }
 
-   .card { padding:10px; height:215px; border-bottom:1px solid #ddd; width:450px; font-size:.7em; display:inline-block; vertical-align:top; background-color: #eee; margin-bottom:20px; margin-left: 20px;}
+   .card { padding:10px; height:215px; border-bottom:1px solid #ddd; width:450px; font-size:.7em; display:inline-block !important; vertical-align:top; background-color: #eee; margin-bottom:20px; margin-left: 20px;}
    .card div { padding:3px; }
    .card:hover { opacity:.5; cursor:pointer; }
    .card .mentalSwatch { background-color:#fff !important; color:#b75b60 !important; padding:5px 8px 5px 8px; font-weight:900; text-transform: uppercase;border-radius:5px;display:table;}
@@ -191,7 +191,7 @@
     #wrapper { width:90%; }
     #chartLabels .yearLabel { font-size:0.5em; width:4.6%; }
     #filter input { font-size:0.6em; }
-    .card { padding:20px; height:auto !important; width:32%; display:block; }
+    .card { padding:20px; height:auto !important; width:32%; display:block !important; }
     #sidebar { text-align:center !important; height:200px; }
    }
 
