--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -33,7 +33,7 @@
    a:hover { color:#333 !important; }
    .name { text-transform: capitalize !important; font-weight:900; font-size:1.25em; }
 
-   .card { padding:10px; height:215px; border-bottom:1px solid #ddd; width:450px; font-size:.7em; display:inline-block; vertical-align:top; background-color: #eee; margin-bottom:20px; margin-left: 20px;}
+   .card { position:relative;padding:10px; height:230px; width:450px; font-size:.7em; display:inline-block; vertical-align:top; background-color: #eee; margin-bottom:20px; margin-left: 20px;}
    .card div { padding:3px; }
    .card:hover { opacity:.5; cursor:pointer; }
    .card .mentalSwatch { background-color:#fff !important; color:#b75b60 !important; padding:5px 8px 5px 8px; font-weight:900; text-transform: uppercase;border-radius:5px;display:table;}
@@ -44,7 +44,7 @@
    .description_chatter, .url { display:none; }
    .featherlight-content .description_chatter { display:block !important; }
    .featherlight-content .readmore { display:none; }
-   .readmore { text-align:center; }
+   .readmore { position:absolute;text-align:center; width: 100%; text-decoration:none; color:#b75b60; font-weight:bold; bottom:12px;}
    .featherlight-content .url { display:block !important; }
    .featherlight-content .card { width:100% !important; background-color: #eee; !important; border:0 !important;}
    .featherlight-content .card:hover { opacity:1 !important; cursor:normal !important; }
