overflow on lightbox

--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -38,7 +38,7 @@
    .card:hover { opacity:.5; cursor:pointer; }
    .card .mentalSwatch { background-color:#fff !important; color:#b75b60 !important; padding:5px 8px 5px 8px; font-weight:900; text-transform: uppercase;border-radius:5px;display:table;}
    
-    .featherlight .featherlight-content {background-color: #eee; overflow:hidden;}
+    .featherlight .featherlight-content {background-color: #eee; overflow-y:scroll;overflow-x:hidden;}
     .featherlight-content { width:750px; height:350px; }
     
    .description_chatter, .url { display:none; }
