--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -225,7 +225,7 @@
      <div class="chart" id="chartAll">
 
 <div id="topClickies">
-<div id="clickyStuff">Roll over each dot to see individual victims</div>
+<div id="clickyStuff">Roll over each dot to see individuals</div>
 
 <div id="mainFilters">
 <!--  <span>FILTER DEATH REPORTS | <span class="zoom">RESET VIEW</span> -->
