--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -258,7 +258,7 @@
         <div class='filter' data="SUICIDE" metric="manner"><span class="bigDot"></span><a href="javascript:void(0)">Suicide</a> <div class="count">0</div></div>
         <div class='filter' data="ACCIDENT" metric="manner"><span class="bigDot"></span><a href="javascript:void(0)">Accidental Death</a> <div class="count">0</div></div>
         <div class='filter' data="NATURAL" metric="manner"><span class="bigDot"></span><a href="javascript:void(0)">Natural Causes</a> <div class="count">0</div></div>
-        <div class='filter' data="NA" metric="manner"><span class="bigDot"></span><a href="javascript:void(0)">NA</a> <div class="count">0</div></div> 
+        <div class='filter' data="Ruling: NA" metric="manner"><span class="bigDot"></span><a href="javascript:void(0)">NA</a> <div class="count">0</div></div> 
         </div>
         <div class="filterSection weapon">
         <div class='filter2' data="GUN" metric="weapon"><span id="weaponDot" class="bigDot"></span><a href="javascript:void(0)">Gun</a> <div class="count">0</div></div>
