--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -50,7 +50,7 @@
    .featherlight-content .card:hover { opacity:1 !important; cursor:normal !important; }
 
     .tooltip .name {font-size:1em;color:#333;margin-bottom:4px;}
-    .tooltip .mentalSwatch { font-size:.9em;color:#b75b60 !important; background-color:#fff !important;font-weight:900; text-transform: uppercase;padding:0;border-radius:none;}
+    .tooltip .mentalSwatch { font-size:.9em;color:#999 !important; background-color:#fff !important;font-weight:900; text-transform: uppercase;padding:0;border-radius:none;}
     
    .url { font-weight:900; padding-left:6px !important;}
 
@@ -198,7 +198,7 @@
    @media (max-width:320px) {
     #wrapper { width:100%; }
    }
-  </style> 
+  </style>
 </head>
 
 <body>
